fix: recommended books overflow
added fixed width to the books on smaller devices and added height auto for it to rescale automatically

--- a/client/src/styles/BookInfoPage/BookInfo.css
+++ b/client/src/styles/BookInfoPage/BookInfo.css
@@ -909,8 +909,11 @@
     transition:
       transform 0.2s ease,
       box-shadow 0.2s ease;
-    min-width: 200px;
+    width: 200px;
+    height: auto;
+
     flex-shrink: 0;
+    overflow: hidden;
   }
 
   .bookinfo-related-card:hover {
@@ -959,6 +962,10 @@
 
   .book-description-text {
     font-size: 13px;
+  }
+
+  .bookinfo-related-card {
+    height: auto;
   }
 }
 .bookinfo-rating-share-row {
